added login,view burgers and reviews

--- a/WFD/templates/admin/index.html.twig
+++ b/WFD/templates/admin/index.html.twig
@@ -11,10 +11,10 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
+    ADMIN LOGIN
     <ul>
-        <li>Your controller at <code>src/Controller/ProductController.php</code></li>
-        <li>Your template at <code>templates/product/index.html.twig</code></li>
+        <li>Your controller at <code>src/Controller/AdminController.php</code></li>
+        <li>Your template at <code>templates/admin/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
