--- a/WFD/templates/burger_con/edit.html.twig
+++ b/WFD/templates/burger_con/edit.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit IceCream{% endblock %}
+{% block title %}Edit Burgers{% endblock %}
 
 {% block body %}
 
-    <h1>Edit IceCream</h1>
+    <h1>Edit Burgers</h1>
 
-    {% include 'ice_cream/_form.html.twig' with {'form': form, 'button_label': 'Edit'} only %}
+    {% include 'burger_con/_form.html.twig' with {'form': form, 'button_label': 'Save'} only %}
 
-    <a href="{{ path('ice_cream_index') }}">back to list</a>
+    <a href="{{ path('burger_con_index') }}">back to list</a>
 
-    {% include 'ice_cream/_delete_form.html.twig' with {'identifier': iceCream.id} only %}
+    {% include 'burger_con/_delete_form.html.twig' with {'identifier': burger.id} only %}
 
 {% endblock %}
