--- a/WFD/templates/burger_con/show.html.twig
+++ b/WFD/templates/burger_con/show.html.twig
@@ -1,66 +1,58 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}IceCream{% endblock %}
+{% block title %}Burger{% endblock %}
 
 {% block body %}
 
-    <h1>IceCream</h1>
+    <h1>Burger</h1>
 
     <table>
         <tr>
             <th>Id</th>
-            <td>{{ iceCream.id }}</td>
+            <td>{{ burger.id }}</td>
         </tr>
         <tr>
             <th>Name</th>
-            <td>{{ iceCream.name }}</td>
-        </tr>
-        <tr>
-            <th>Brand</th>
-            <td>{{ iceCream.brand }}</td>
-        </tr>
-        <tr>
-            <th>Flavour</th>
-            <td>{{ iceCream.flavour }}</td>
+            <td>{{ burger.name }}</td>
         </tr>
         <tr>
             <th>Summary</th>
-            <td>{{ iceCream.summary }}</td>
+            <td>{{ burger.summary }}</td>
         </tr>
         <tr>
             <th>Price</th>
-            <td>{{ iceCream.price }}</td>
+            <td>{{ burger.price }}</td>
         </tr>
         <tr>
             <th>Description</th>
-            <td>{{ iceCream.description }}</td>
+            <td>{{ burger.description }}</td>
         </tr>
         <tr>
             <th>Ingredients</th>
-            <td>{{ iceCream.ingredients }}</td>
+            <td>{{ burger.ingredients }}</td>
         </tr>
         <tr>
             <th>Photo</th>
-            <td>{{ iceCream.photo }}</td>
+            <td>{{ burger.photo }}</td>
         </tr>
         <tr>
             <th>Public</th>
-            <td>{{ iceCream.public ? 'Yes' : 'No' }}</td>
+            <td>{{ burger.public ? 'Yes' : 'No' }}</td>
         </tr>
 
         <tr>
             <th>Creator</th>
-            <td>{{ iceCream.user.username }}</td>
+            <td>{{ burger.user.username }}</td>
 
         </tr>
 
 
     </table>
 
-    <a href="{{ path('ice_cream_index') }}">back to list</a>
+    <a href="{{ path('burger_con_index') }}">back to list</a>
 
-    <a href="{{ path('ice_cream_edit', {'id': iceCream.id}) }}">edit</a>
+    <a href="{{ path('burger_con_edit', {'id': burger.id}) }}">edit</a>
 
-    {% include 'ice_cream/_delete_form.html.twig' with {'identifier': iceCream.id} only %}
+    {% include 'burger_con/_delete_form.html.twig' with {'identifier': burger.id} only %}
 
 {% endblock %}
