--- a/WFD/templates/default/index.html.twig
+++ b/WFD/templates/default/index.html.twig
@@ -1,20 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}The Burger {{ controller_name }}!{% endblock %}
+{% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Burger Home Page</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    USER LOGIN
+    {#this will show the login link if user is not logged in#}
+    {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
+        <p>Welcome stranger,  <a href="{{ path('login') }}" >Login</a> </p>
+    {% endif %}
+    {#welcomes user if user is logged in#}
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <p>Welcome,  {{ app.user.username }}</p>
+    {% endif %}
+
     <ul>
-        <li>Your controller at <code>src/Controller/DefaultController.php</code></li>
-        <li>Your template at <code>templates/default/index.html.twig</code></li>
+
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            <li><a href="{{ path('logout') }}" >Logout</a></li>
+
+        {% endif %}
+
+        {% if is_granted('ROLE_ADMIN') %}
+            <li><a href="{{ path('admin_crud') }}" >CRUD</a></li>
+        {% endif %}
+
     </ul>
-</div>
 {% endblock %}
