--- a/WFD/templates/review/edit.html.twig
+++ b/WFD/templates/review/edit.html.twig
@@ -6,7 +6,7 @@
 
     <h1>Edit Review</h1>
 
-    {% include 'review/_form.html.twig' with {'form': form, 'button_label': 'Edit'} only %}
+    {% include 'review/_form.html.twig' with {'form': form, 'button_label': 'Save'} only %}
 
     <a href="{{ path('review_index') }}">back to list</a>
 
