Updated Admin Login view

--- a/WFD/templates/admin/index.html.twig
+++ b/WFD/templates/admin/index.html.twig
@@ -9,11 +9,11 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello Admin: {{ app.user.username }}! ✅</h1>
 
     ADMIN LOGIN
     <ul>
-        <li>Your controller at <code>src/Controller/AdminController.php</code></li>
+        <li>This is admin curd</li>
         <li>Your template at <code>templates/admin/index.html.twig</code></li>
     </ul>
 </div>
