--- a/WFD/templates/default/index.html.twig
+++ b/WFD/templates/default/index.html.twig
@@ -8,8 +8,9 @@
 
     {#this will show the login link if user is not logged in#}
     {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
-        <p>Welcome stranger,  <a href="{{ path('login') }}" >Login</a> </p>
+        <p>Welcome stranger,  <a href="{{ path('login') }}" >Login</a> or <a href="{{ path('user_new') }}" >Create Account</a>  </p>
     {% endif %}
+
     {#welcomes user if user is logged in#}
     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <p>Welcome,  {{ app.user.username }}</p>
@@ -23,7 +24,9 @@
         {% endif %}
 
         {% if is_granted('ROLE_ADMIN') %}
-            <li><a href="{{ path('admin_crud') }}" >CRUD</a></li>
+            <li><a href="{{ path('admin') }}" >CRUD</a></li>
+            <li><a href="{{ path('user_index') }}" >USERS</a></li>
+
         {% endif %}
 
     </ul>
