Completed Admin CURD

--- a/WFD/templates/base.html.twig
+++ b/WFD/templates/base.html.twig
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
+            <link rel="stylesheet"
+                  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+                  integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
             <link rel="stylesheet" href="/css/font-awesome.css">
             <link rel="stylesheet" href="/css/styles.css">
             <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
         {% endblock %}
@@ -36,14 +39,24 @@
                             Reviews
                         </a>
                     </li>
+
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li class="nav-items">
+                        <a style="color: #fff;" class="nav-link" href="{{ url('user_index') }}">
+                            <u><strong>Users</strong></u>
+                        </a>
+                    </li>
+                    {% endif %}
                     <li class="nav-items">
                         <a style="color: #fff;" class="nav-link" href="{{ url('login') }}">
                             Sign-In
                         </a>
+                    </li>
                     <li class="nav-items">
                         <a style="color: #fff;" class="nav-link" href="{{ url('logout') }}">
                             Logout
                         </a>
+                    </li>
                 </ul>
             </div>
         </nav>
